Checking import grouping correctness, proper import weight assignment

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "ESLint experiments",
   "main": "index.js",
   "devDependencies": {
+    "@types/node": "^14.14.10",
     "eslint": "^7.14.0",
     "eslint-plugin-experiments": "file:plugin"
   },
